Create initial styling

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,35 @@
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Roboto&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
+h1, h2, h3, h4 {
+  color: #F5F5F5;
+  font-family: 'Dosis', sans-serif;
+  text-align: center;
+}
+
+:not(h1, h2, h3, h4) {
+  font-family: 'Roboto', sans-serif;
+}
+
+.form-container button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2em;
+  border: none;
+  background-color: #67E8F9;
+  width: 3em;
+  height: 3em;
+  outline: none;
+  padding: 1em 0;
+  border-radius: 50%;
+  align-self: center;
+}
+
 #root {
   border: 1px solid blue;
 }
@@ -6,20 +38,59 @@
   display: flex;
   padding: 15px;
   gap: 12px;
-}
-
-* {
-  box-sizing: border-box;
+  
+  background-color: #18181B;
 }
 
 body {
-  margin: 1rem;
+  margin: 0;
 }
 
+
 .form-container {
-  padding: 12px;
+  padding: 1em;
   border: 1px solid red;
   border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+
+.input-collection{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
+  border-radius: 12px;
+  padding: 1em;
+  
+  background-color: #0E7490;
+}
+
+.input-collection:last-of-type {
+  margin-bottom: 1em;
+}
+
+.date-flex, .company-flex  {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-container h1 {
+  margin-top: 0;
+}
+
+label {
+  color: #E7E5E4;
+}
+
+input {
+  display: block;
+  padding: 0.5em 0.5em;
+  margin-bottom: 1.5em;
+  
+  border: 1px solid transparent;
+  border-radius: 8px;
 }
 
 form {
@@ -42,16 +113,47 @@ form {
   padding: 15px;
 }
 
-.experience {
-  border: 1px solid yellow;
+.preview-wrapper h1 {
+  padding-left: 5%;
+  margin-top: 1em;
 }
+
+h1.name-p {
+ font-family: 'Roboto', sans-serif;
+}
+
+.personal-p > * {
+  text-align: left;
+}
+
 
 .profile-p,
 .education-p {
-  border-bottom: 1px solid black;
-  min-height: 25%;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
-.experience-template {
-    border-bottom: 1px solid black;
+.experience-template,
+.education-template {
+  border: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+@media (max-width: 768px) {
+  :not(h1, h2, h3, h4) {
+    font-size: 0.9rem;
+  }
+
+  .app {
+    display: block;
+  }
+
+  form {
+    width: 100%;
+  }
+
+  .preview-wrapper {
+    width: 100%;
+  }
 }
