--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,18 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Roboto&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
-h1, h2, h3, h4 {
-  color: #F5F5F5;
-  font-family: 'Dosis', sans-serif;
+h1,
+h2,
+h3,
+h4 {
+  color: #f5f5f5;
+  font-family: "Dosis", sans-serif;
   text-align: center;
 }
 
 :not(h1, h2, h3, h4) {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .app {
@@ -20,13 +23,20 @@ h1, h2, h3, h4 {
   padding: 15px;
   gap: 2.5em;
   min-height: 100vh;
-  background-color: #18181B;
+  background-color: #18181b;
 }
 
 body {
   margin: 0;
 }
 
+button:not([disabled]) {
+  cursor: pointer;
+}
+
+button:not([disabled]):hover {
+  transform: scale(110%);
+}
 
 .form-container {
   padding: 1em;
@@ -38,20 +48,21 @@ body {
   gap: 1em;
 }
 
-.input-collection{
+.input-collection {
   display: flex;
   flex-wrap: wrap;
   gap: 1em;
   border-radius: 12px;
-  padding: 1em;  
-  background-color: #0E7490;
+  padding: 1em;
+  background-color: #0e7490;
 }
 
 .input-collection:last-of-type {
   margin-bottom: 1em;
 }
 
-.date-flex, .company-flex  {
+.date-flex,
+.company-flex {
   display: flex;
   flex-direction: column;
 }
@@ -66,7 +77,7 @@ body {
   align-items: center;
   font-size: 1.2em;
   border: none;
-  background-color: #67E8F9;
+  background-color: #67e8f9;
   width: 3em;
   height: 3em;
   outline: none;
@@ -76,14 +87,14 @@ body {
 }
 
 label {
-  color: #E7E5E4;
+  color: #e7e5e4;
 }
 
 input {
   display: block;
   padding: 0.5em 0.5em;
   margin-bottom: 1.5em;
-  
+
   border: 1px solid transparent;
   border-radius: 8px;
 }
@@ -106,7 +117,7 @@ form {
 .form-container .delete-btn {
   font-size: 1em;
   padding: 1em 2em;
-  background-color: #FCA5A5;
+  background-color: #fca5a5;
   border-radius: 8px;
 }
 
@@ -121,14 +132,14 @@ form {
   padding: 1em 2em;
   border-radius: 8px;
   border: none;
-  background-color: #67E8F9;
+  background-color: #67e8f9;
 }
 
 .preview-wrapper {
   display: flex;
   flex-direction: column;
   width: 50%;
-  
+
   padding: 15px;
   background-color: white;
 }
@@ -136,20 +147,18 @@ form {
 .preview-wrapper h1,
 .preview-wrapper h2,
 .preview-wrapper h3 {
-  color: #312E81;
+  color: #312e81;
   padding-left: 5%;
   margin-top: 1em;
-  
 }
 
 h1.name-p {
- font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .personal-p > * {
   text-align: left;
 }
-
 
 .profile-p,
 .education-p {
@@ -159,15 +168,13 @@ h1.name-p {
 }
 
 .experience-template,
-.education-template {  
+.education-template {
   border-bottom: 1px solid black;
 }
 
 .experience-template:last-child {
   border: 0;
 }
-
-
 
 @media (max-width: 768px) {
   :not(h1, h2, h3, h4) {
